--- a/main/index.html
+++ b/main/index.html
@@ -91,16 +91,14 @@
   <h1>brainrotted gods hub 🥀🔥</h1>
   
   <nav>
-    <a href="#">unc zone</a>
-    <a href="#">meltmaxxing</a>
-    <a href="#">skibidi</a>
+    <a href="../game/">Brainrot Games</a> <!-- only nav link -->
   </nav>
 
   <p>welcome to the chaos boi 🫱🫱</p>
 
   <script>
     // spawn falling emojis randomly
-    const emojis = ["🥀","🔥","😂","🫱","42","67","🥭"];
+    const emojis = ["🥀","🔥","😂","🫱","42","67"];
     function dropEmoji() {
       const span = document.createElement("span");
       span.className = "random-emoji";
