--- a/main/index.html
+++ b/main/index.html
@@ -91,7 +91,7 @@
   <h1>brainrotted gods hub 🥀🔥</h1>
   
   <nav>
-    <a href="../game/">Brainrot Games</a> <!-- only nav link -->
+    <a href="../games/">Brainrot Games</a> <!-- only nav link -->
   </nav>
 
   <p>welcome to the chaos boi 🫱🫱</p>
