--- a/games/index.html
+++ b/games/index.html
@@ -22,7 +22,7 @@
       animation: glow 2s infinite alternate;
     }
 
-    nav a, #fullscreen-btn {
+    nav a, #open-blob {
       display: inline-block;
       margin: 10px;
       padding: 12px 20px;
@@ -36,7 +36,7 @@
       cursor: pointer;
     }
 
-    nav a:hover, #fullscreen-btn:hover {
+    nav a:hover, #open-blob:hover {
       background: #33ffff;
       color: #000;
       box-shadow: 0 0 25px #ff33ff;
@@ -57,17 +57,31 @@
       animation: spin 30s linear infinite;
     }
 
-    #game-container {
-      margin-top: 40px;
+    @keyframes glow {
+      from { text-shadow: 0 0 10px #ff33ff, 0 0 20px #ff66ff; }
+      to { text-shadow: 0 0 20px #33ffff, 0 0 40px #66ffff; }
     }
 
-    #fullscreen-game {
-      width: 100vw;
-      height: 100vh;
-      border: none;
-      display: none;
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
     }
 
+    .random-emoji {
+      font-size: 2rem;
+      position: absolute;
+      animation: fall 6s linear infinite;
+    }
+
+    @keyframes fall {
+      0% { transform: translateY(-50px) rotate(0deg); opacity: 1; }
+      100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
@@ -80,12 +94,9 @@
     <a href="../main/">Main Hub</a>
   </nav>
 
-  <p>click below for full chaos 🫱🫱</p>
+  <p>click below to open the Brainrot merge game 🫱🫱</p>
 
-  <div id="game-container">
-    <button id="fullscreen-btn">Play Fullscreen Blob Game</button>
-    <iframe id="fullscreen-game"></iframe>
-  </div>
+  <button id="open-blob">Play Blob Game</button>
 
   <script>
     // falling emojis
@@ -100,16 +111,12 @@
     }
     setInterval(dropEmoji, 800);
 
-    // fullscreen blob game
-    const button = document.getElementById('fullscreen-btn');
-    const iframe = document.getElementById('fullscreen-game');
-    button.addEventListener('click', () => {
-      const blobHTML = `<html><body style="margin:0;"><iframe src="blob:https://1460629336-atari-embeds.googleusercontent.com/fcf33f09-6dfc-44af-ba71-b374c761fecc" width="100%" height="100%" frameborder="0"></iframe></body></html>`;
-      const blob = new Blob([blobHTML], { type: 'text/html' });
-      const url = URL.createObjectURL(blob);
-      iframe.src = url;
-      iframe.style.display = 'block';
-      button.style.display = 'none';
+    // open blob in new tab
+    document.getElementById('open-blob').addEventListener('click', () => {
+      window.open(
+        'blob:https://1460629336-atari-embeds.googleusercontent.com/fcf33f09-6dfc-44af-ba71-b374c761fecc',
+        '_blank'
+      );
     });
   </script>
 
